update routes for last value
